pt2/deployments.yaml
---


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app1-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app1-html
        configMap:
          name: app1-html

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app2-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app2-html
        configMap:
          name: app2-html

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: app3-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: app3-html
        configMap:
          name: app3-html
---
