pt2/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1
spec:
  type: NodePort
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app2
spec:
  type: NodePort
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  type: NodePort
  selector:
    app: app3
  ports:
    - port: 80
      targetPort: 80
